# k3s-platform

./: .gitignore  .image-tags.env  CLAUDE.md  GAPS_PLAN.md  PLAN.md  README.md  SCHEMA_GEN_PLAN.md  STATUS.md  Tiltfile  apps.v2.yaml  apps.yaml
apps/fastapi/: Dockerfile  Dockerfile.dev  requirements.txt
apps/fastapi/src/: main.py
apps/postgresql/: docker-compose.yaml
apps/serverless-example/: Dockerfile.dev  cloudbuild.yaml
apps/serverless-example/functions/: __init__.py  api.py  scheduled.py  workers.py
apps/valkey/: values.yaml
argocd-state/gcp/: apps-kustomize.yaml  fastapi-app.yaml  kustomization.yaml  postgresql-compose.yaml  serverless-example-serverless.yaml  valkey.yaml
argocd-state/gcp/apps/fastapi/: manifests.yaml
argocd-state/gcp/compose/postgresql/: manifests.yaml
argocd-state/gcp/serverless/serverless-example/: manifests.yaml
argocd-state/local/: apps-kustomize.yaml  fastapi-app.yaml  kustomization.yaml  project.yaml  serverless-example-serverless.yaml  valkey.yaml
argocd-state/local/serverless/serverless-example/: manifests.yaml
configs/: .env.dev.example  .env.example  .env.gcp  .env.gcp.example  .env.local.example  upgrade-plans.yaml
k8s/base/: kustomization.yaml  namespaces.yaml  network-policies.yaml
k8s/base/fastapi/: deployment.yaml  hpa.yaml  pdb.yaml  service.yaml
k8s/overlays/dev/: kustomization.yaml
k8s/overlays/gcp/: ingress-gcp.yaml  ingress-haproxy.yaml  kustomization.yaml  scaledobject.yaml
k8s/overlays/local/: kustomization.yaml
libs/k3sapp/: README.md  pyproject.toml
libs/k3sapp/k3sapp/: __init__.py  cli.py  generators.py  schema.py  types.py
libs/k3sapp/tests/: __init__.py  test_generators.py  test_schema.py  test_types.py
libs/k3scompose/: README.md  pyproject.toml
libs/k3scompose/k3scompose/: __init__.py  cli.py  generators.py  parser.py  types.py
libs/k3scompose/tests/: __init__.py  test_generators.py  test_parser.py  test_types.py
libs/k3sfn/: README.md  pyproject.toml
libs/k3sfn/k3sfn/: __init__.py  cli.py  decorators.py  runtime.py  types.py
libs/k3sgateway/: pyproject.toml
libs/k3sgateway/k3sgateway/: __init__.py  cli.py  generators.py  types.py
platform/: deploy.sh
platform/argocd/: argocd-cm.yaml  argocd-cmd-params.yaml  argocd-rbac.yaml  kustomization.yaml  tolerations-patch.yaml
platform/argocd/applications/: app-of-apps.yaml
platform/argocd/applications/gcp/: fastapi.yaml  kustomization.yaml  valkey.yaml
platform/cluster-autoscaler/: autoscaler.yaml
platform/external-secrets/: cluster-secret-store-gcp.yaml  kustomization.yaml  service-account.yaml
platform/gcp-ccm/: ccm.yaml  kustomization.yaml  storage-class.yaml
platform/gcp-pd-csi/: controller-patch.yaml  kustomization.yaml  node-patch.yaml  storage-class.yaml
platform/haproxy-ingress/: kustomization.yaml  namespace.yaml  values.yaml
platform/system-upgrade-controller/: kustomization.yaml
platform/traefik/: helm-chart-config.yaml  kustomization.yaml
providers/dev/: k3d-config.yaml  setup.sh  teardown.sh
providers/gcp/: bootstrap.sh  deploy-infra.sh  deploy.sh  setup-secrets.sh  teardown.sh  test.sh
providers/local/: k3d-config.yaml  setup.sh  teardown.sh
schemas/: apps-schema.json
scripts/: add-service.sh  build-images.sh  deploy-apps.sh  generate-argocd-state.sh  new-serverless-app.sh  upgrade-cluster.sh
(+3 files in other folders)
